OFICIAL_COMPI/ProgramaParser.py
# Generated from Programa.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ProgramaParser ( Parser ):

    grammarFileName = "Programa.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'int'", "'main'", "'('", "')'", "'std'", 
                     "'::'", "'cout'", "'<<'", "'endl'", "';'", "'if'", 
                     "'else'", "'='", "'cin'", "'>>'", "'return'", "'#'", 
                     "'include'", "'<'", "'>'", "'for'", "'{'", "'}'", "'true'", 
                     "'false'", "'+'", "'-'", "'*'", "'/'", "'>='", "'<='", 
                     "'=='", "'!='", "'?'", "':'", "'float'", "'double'", 
                     "'bool'", "'string'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "ID", "INT", "FLOAT", "DOUBLE", "CADENA", "WS", "COMMENT" ]

    RULE_programa = 0
    RULE_programaPrincipal = 1
    RULE_sentencia = 2
    RULE_sentenciaCout = 3
    RULE_sentenciaIf = 4
    RULE_sentenciaElse = 5
    RULE_declaracionVariable = 6
    RULE_sentenciaInput = 7
    RULE_sentenciaReturn = 8
    RULE_sentenciaInclude = 9
    RULE_sentenciaFor = 10
    RULE_bloque = 11
    RULE_bloqueElse = 12
    RULE_bloqueIf = 13
    RULE_expresion = 14
    RULE_tipo = 15

    ruleNames =  [ "programa", "programaPrincipal", "sentencia", "sentenciaCout", 
                   "sentenciaIf", "sentenciaElse", "declaracionVariable", 
                   "sentenciaInput", "sentenciaReturn", "sentenciaInclude", 
                   "sentenciaFor", "bloque", "bloqueElse", "bloqueIf", "expresion", 
                   "tipo" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    ID=40
    INT=41
    FLOAT=42
    DOUBLE=43
    CADENA=44
    WS=45
    COMMENT=46

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def programaPrincipal(self):
            return self.getTypedRuleContext(ProgramaParser.ProgramaPrincipalContext,0)


        def EOF(self):
            return self.getToken(ProgramaParser.EOF, 0)

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProgramaParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(ProgramaParser.SentenciaContext,i)


        def getRuleIndex(self):
            return ProgramaParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = ProgramaParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.programaPrincipal()
            self.state = 34 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 33
                self.sentencia()
                self.state = 36 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 1030794446882) != 0)):
                    break

            self.state = 38
            self.match(ProgramaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramaPrincipalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sentenciaInclude(self):
            return self.getTypedRuleContext(ProgramaParser.SentenciaIncludeContext,0)


        def bloque(self):
            return self.getTypedRuleContext(ProgramaParser.BloqueContext,0)


        def getRuleIndex(self):
            return ProgramaParser.RULE_programaPrincipal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgramaPrincipal" ):
                listener.enterProgramaPrincipal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgramaPrincipal" ):
                listener.exitProgramaPrincipal(self)




    def programaPrincipal(self):

        localctx = ProgramaParser.ProgramaPrincipalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_programaPrincipal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.sentenciaInclude()
            self.state = 41
            self.match(ProgramaParser.T__0)
            self.state = 42
            self.match(ProgramaParser.T__1)
            self.state = 43
            self.match(ProgramaParser.T__2)
            self.state = 44
            self.match(ProgramaParser.T__3)
            self.state = 45
            self.bloque()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sentenciaCout(self):
            return self.getTypedRuleContext(ProgramaParser.SentenciaCoutContext,0)


        def sentenciaIf(self):
            return self.getTypedRuleContext(ProgramaParser.SentenciaIfContext,0)


        def declaracionVariable(self):
            return self.getTypedRuleContext(ProgramaParser.DeclaracionVariableContext,0)


        def sentenciaInput(self):
            return self.getTypedRuleContext(ProgramaParser.SentenciaInputContext,0)


        def sentenciaReturn(self):
            return self.getTypedRuleContext(ProgramaParser.SentenciaReturnContext,0)


        def sentenciaInclude(self):
            return self.getTypedRuleContext(ProgramaParser.SentenciaIncludeContext,0)


        def sentenciaFor(self):
            return self.getTypedRuleContext(ProgramaParser.SentenciaForContext,0)


        def getRuleIndex(self):
            return ProgramaParser.RULE_sentencia

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentencia" ):
                listener.enterSentencia(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentencia" ):
                listener.exitSentencia(self)




    def sentencia(self):

        localctx = ProgramaParser.SentenciaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_sentencia)
        try:
            self.state = 54
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 47
                self.sentenciaCout()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 48
                self.sentenciaIf()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 49
                self.declaracionVariable()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 50
                self.sentenciaInput()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 51
                self.sentenciaReturn()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 52
                self.sentenciaInclude()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 53
                self.sentenciaFor()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciaCoutContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CADENA(self):
            return self.getToken(ProgramaParser.CADENA, 0)

        def expresion(self):
            return self.getTypedRuleContext(ProgramaParser.ExpresionContext,0)


        def getRuleIndex(self):
            return ProgramaParser.RULE_sentenciaCout

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentenciaCout" ):
                listener.enterSentenciaCout(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentenciaCout" ):
                listener.exitSentenciaCout(self)




    def sentenciaCout(self):

        localctx = ProgramaParser.SentenciaCoutContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_sentenciaCout)
        try:
            self.state = 110
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 56
                self.match(ProgramaParser.T__4)
                self.state = 57
                self.match(ProgramaParser.T__5)
                self.state = 58
                self.match(ProgramaParser.T__6)
                self.state = 59
                self.match(ProgramaParser.T__7)
                self.state = 60
                self.match(ProgramaParser.CADENA)
                self.state = 67
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [8]:
                    self.state = 61
                    self.match(ProgramaParser.T__7)
                    self.state = 62
                    self.match(ProgramaParser.T__4)
                    self.state = 63
                    self.match(ProgramaParser.T__5)
                    self.state = 64
                    self.match(ProgramaParser.T__8)
                    self.state = 65
                    self.match(ProgramaParser.T__9)
                    pass
                elif token in [10]:
                    self.state = 66
                    self.match(ProgramaParser.T__9)
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 69
                self.match(ProgramaParser.T__4)
                self.state = 70
                self.match(ProgramaParser.T__5)
                self.state = 71
                self.match(ProgramaParser.T__6)
                self.state = 72
                self.match(ProgramaParser.T__7)
                self.state = 73
                self.match(ProgramaParser.CADENA)
                self.state = 74
                self.match(ProgramaParser.T__9)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 75
                self.match(ProgramaParser.T__4)
                self.state = 76
                self.match(ProgramaParser.T__5)
                self.state = 77
                self.match(ProgramaParser.T__6)
                self.state = 78
                self.match(ProgramaParser.T__7)
                self.state = 79
                self.expresion(0)
                self.state = 80
                self.match(ProgramaParser.T__9)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 82
                self.match(ProgramaParser.T__4)
                self.state = 83
                self.match(ProgramaParser.T__5)
                self.state = 84
                self.match(ProgramaParser.T__6)
                self.state = 85
                self.match(ProgramaParser.T__7)
                self.state = 86
                self.match(ProgramaParser.CADENA)
                self.state = 87
                self.match(ProgramaParser.T__7)
                self.state = 88
                self.expresion(0)
                self.state = 95
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [8]:
                    self.state = 89
                    self.match(ProgramaParser.T__7)
                    self.state = 90
                    self.match(ProgramaParser.T__4)
                    self.state = 91
                    self.match(ProgramaParser.T__5)
                    self.state = 92
                    self.match(ProgramaParser.T__8)
                    self.state = 93
                    self.match(ProgramaParser.T__9)
                    pass
                elif token in [10]:
                    self.state = 94
                    self.match(ProgramaParser.T__9)
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 97
                self.match(ProgramaParser.T__4)
                self.state = 98
                self.match(ProgramaParser.T__5)
                self.state = 99
                self.match(ProgramaParser.T__6)
                self.state = 100
                self.match(ProgramaParser.T__7)
                self.state = 101
                self.expresion(0)
                self.state = 108
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [8]:
                    self.state = 102
                    self.match(ProgramaParser.T__7)
                    self.state = 103
                    self.match(ProgramaParser.T__4)
                    self.state = 104
                    self.match(ProgramaParser.T__5)
                    self.state = 105
                    self.match(ProgramaParser.T__8)
                    self.state = 106
                    self.match(ProgramaParser.T__9)
                    pass
                elif token in [10]:
                    self.state = 107
                    self.match(ProgramaParser.T__9)
                    pass
                else:
                    raise NoViableAltException(self)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciaIfContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresion(self):
            return self.getTypedRuleContext(ProgramaParser.ExpresionContext,0)


        def bloque(self):
            return self.getTypedRuleContext(ProgramaParser.BloqueContext,0)


        def sentenciaElse(self):
            return self.getTypedRuleContext(ProgramaParser.SentenciaElseContext,0)


        def getRuleIndex(self):
            return ProgramaParser.RULE_sentenciaIf

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentenciaIf" ):
                listener.enterSentenciaIf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentenciaIf" ):
                listener.exitSentenciaIf(self)




    def sentenciaIf(self):

        localctx = ProgramaParser.SentenciaIfContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_sentenciaIf)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(ProgramaParser.T__10)
            self.state = 113
            self.match(ProgramaParser.T__2)
            self.state = 114
            self.expresion(0)
            self.state = 115
            self.match(ProgramaParser.T__3)
            self.state = 116
            self.bloque()
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12:
                self.state = 117
                self.sentenciaElse()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciaElseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bloque(self):
            return self.getTypedRuleContext(ProgramaParser.BloqueContext,0)


        def getRuleIndex(self):
            return ProgramaParser.RULE_sentenciaElse

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentenciaElse" ):
                listener.enterSentenciaElse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentenciaElse" ):
                listener.exitSentenciaElse(self)




    def sentenciaElse(self):

        localctx = ProgramaParser.SentenciaElseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_sentenciaElse)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(ProgramaParser.T__11)
            self.state = 121
            self.bloque()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionVariableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(ProgramaParser.TipoContext,0)


        def ID(self):
            return self.getToken(ProgramaParser.ID, 0)

        def expresion(self):
            return self.getTypedRuleContext(ProgramaParser.ExpresionContext,0)


        def bloque(self):
            return self.getTypedRuleContext(ProgramaParser.BloqueContext,0)


        def bloqueElse(self):
            return self.getTypedRuleContext(ProgramaParser.BloqueElseContext,0)


        def bloqueIf(self):
            return self.getTypedRuleContext(ProgramaParser.BloqueIfContext,0)


        def getRuleIndex(self):
            return ProgramaParser.RULE_declaracionVariable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracionVariable" ):
                listener.enterDeclaracionVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracionVariable" ):
                listener.exitDeclaracionVariable(self)




    def declaracionVariable(self):

        localctx = ProgramaParser.DeclaracionVariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_declaracionVariable)
        self._la = 0 # Token type
        try:
            self.state = 159
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 123
                self.tipo()
                self.state = 124
                self.match(ProgramaParser.ID)
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==13:
                    self.state = 125
                    self.match(ProgramaParser.T__12)
                    self.state = 126
                    self.expresion(0)


                self.state = 129
                self.match(ProgramaParser.T__9)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 131
                self.tipo()
                self.state = 132
                self.match(ProgramaParser.ID)
                self.state = 133
                self.match(ProgramaParser.T__12)
                self.state = 134
                self.expresion(0)
                self.state = 135
                self.match(ProgramaParser.T__9)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 137
                self.tipo()
                self.state = 138
                self.match(ProgramaParser.ID)
                self.state = 139
                self.match(ProgramaParser.T__2)
                self.state = 140
                self.match(ProgramaParser.T__3)
                self.state = 141
                self.bloque()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 143
                self.tipo()
                self.state = 144
                self.match(ProgramaParser.ID)
                self.state = 145
                self.match(ProgramaParser.T__2)
                self.state = 146
                self.match(ProgramaParser.T__3)
                self.state = 147
                self.bloqueElse()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 149
                self.tipo()
                self.state = 150
                self.match(ProgramaParser.ID)
                self.state = 151
                self.match(ProgramaParser.T__2)
                self.state = 152
                self.match(ProgramaParser.T__3)
                self.state = 153
                self.bloqueIf()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 155
                self.tipo()
                self.state = 156
                self.match(ProgramaParser.ID)
                self.state = 157
                self.match(ProgramaParser.T__9)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciaInputContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ProgramaParser.ID, 0)

        def getRuleIndex(self):
            return ProgramaParser.RULE_sentenciaInput

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentenciaInput" ):
                listener.enterSentenciaInput(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentenciaInput" ):
                listener.exitSentenciaInput(self)




    def sentenciaInput(self):

        localctx = ProgramaParser.SentenciaInputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_sentenciaInput)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.match(ProgramaParser.T__4)
            self.state = 162
            self.match(ProgramaParser.T__5)
            self.state = 163
            self.match(ProgramaParser.T__13)
            self.state = 164
            self.match(ProgramaParser.T__14)
            self.state = 165
            self.match(ProgramaParser.ID)
            self.state = 166
            self.match(ProgramaParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciaReturnContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresion(self):
            return self.getTypedRuleContext(ProgramaParser.ExpresionContext,0)


        def getRuleIndex(self):
            return ProgramaParser.RULE_sentenciaReturn

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentenciaReturn" ):
                listener.enterSentenciaReturn(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentenciaReturn" ):
                listener.exitSentenciaReturn(self)




    def sentenciaReturn(self):

        localctx = ProgramaParser.SentenciaReturnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_sentenciaReturn)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(ProgramaParser.T__15)
            self.state = 169
            self.expresion(0)
            self.state = 170
            self.match(ProgramaParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciaIncludeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ProgramaParser.ID, 0)

        def getRuleIndex(self):
            return ProgramaParser.RULE_sentenciaInclude

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentenciaInclude" ):
                listener.enterSentenciaInclude(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentenciaInclude" ):
                listener.exitSentenciaInclude(self)




    def sentenciaInclude(self):

        localctx = ProgramaParser.SentenciaIncludeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_sentenciaInclude)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            self.match(ProgramaParser.T__16)
            self.state = 173
            self.match(ProgramaParser.T__17)
            self.state = 174
            self.match(ProgramaParser.T__18)
            self.state = 175
            self.match(ProgramaParser.ID)
            self.state = 176
            self.match(ProgramaParser.T__19)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciaForContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracionVariable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProgramaParser.DeclaracionVariableContext)
            else:
                return self.getTypedRuleContext(ProgramaParser.DeclaracionVariableContext,i)


        def expresion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProgramaParser.ExpresionContext)
            else:
                return self.getTypedRuleContext(ProgramaParser.ExpresionContext,i)


        def bloque(self):
            return self.getTypedRuleContext(ProgramaParser.BloqueContext,0)


        def getRuleIndex(self):
            return ProgramaParser.RULE_sentenciaFor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentenciaFor" ):
                listener.enterSentenciaFor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentenciaFor" ):
                listener.exitSentenciaFor(self)




    def sentenciaFor(self):

        localctx = ProgramaParser.SentenciaForContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_sentenciaFor)
        try:
            self.state = 215
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 178
                self.match(ProgramaParser.T__20)
                self.state = 179
                self.match(ProgramaParser.T__2)
                self.state = 180
                self.declaracionVariable()
                self.state = 181
                self.expresion(0)
                self.state = 182
                self.match(ProgramaParser.T__9)
                self.state = 183
                self.expresion(0)
                self.state = 184
                self.match(ProgramaParser.T__3)
                self.state = 185
                self.bloque()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 187
                self.match(ProgramaParser.T__20)
                self.state = 188
                self.match(ProgramaParser.T__2)
                self.state = 189
                self.declaracionVariable()
                self.state = 190
                self.expresion(0)
                self.state = 191
                self.match(ProgramaParser.T__9)
                self.state = 192
                self.declaracionVariable()
                self.state = 193
                self.match(ProgramaParser.T__3)
                self.state = 194
                self.bloque()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 196
                self.match(ProgramaParser.T__20)
                self.state = 197
                self.match(ProgramaParser.T__2)
                self.state = 198
                self.expresion(0)
                self.state = 199
                self.match(ProgramaParser.T__9)
                self.state = 200
                self.expresion(0)
                self.state = 201
                self.match(ProgramaParser.T__9)
                self.state = 202
                self.expresion(0)
                self.state = 203
                self.match(ProgramaParser.T__3)
                self.state = 204
                self.bloque()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 206
                self.match(ProgramaParser.T__20)
                self.state = 207
                self.match(ProgramaParser.T__2)
                self.state = 208
                self.match(ProgramaParser.T__9)
                self.state = 209
                self.expresion(0)
                self.state = 210
                self.match(ProgramaParser.T__9)
                self.state = 211
                self.expresion(0)
                self.state = 212
                self.match(ProgramaParser.T__3)
                self.state = 213
                self.bloque()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BloqueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProgramaParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(ProgramaParser.SentenciaContext,i)


        def getRuleIndex(self):
            return ProgramaParser.RULE_bloque

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloque" ):
                listener.enterBloque(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloque" ):
                listener.exitBloque(self)




    def bloque(self):

        localctx = ProgramaParser.BloqueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_bloque)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 217
            self.match(ProgramaParser.T__21)
            self.state = 221
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1030794446882) != 0):
                self.state = 218
                self.sentencia()
                self.state = 223
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 224
            self.match(ProgramaParser.T__22)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


